AquaticAlchemy/force-app/main/default/objects/Public_Event__c/Public_Event__c.object-meta.xml
<CustomObject>
    <label>Public Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Public Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>