AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>