AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>