AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5-10</fullName>
            </value>
            <value>
                <fullName>10-13</fullName>
            </value>
            <value>
                <fullName>14-17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>