AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/Camp_Size__c.field-meta.xml
<CustomField>
    <fullName>Camp_Size__c</fullName>
    <label>Camp Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>