AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/EndDateString__c.field-meta.xml
<CustomField>
    <fullName>EndDateString__c</fullName>
    <label>EndDateString</label>
    <length>20</length>
    <type>Text</type>
</CustomField>