AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF( ISPICKVAL( Subject__c , &quot;Aquatic Class&quot;) ,  &quot;/resource/class&quot;, IF( ISPICKVAL( Subject__c, &quot;Swim Meet&quot;) , &quot;/resource/meet&quot;, IF( ISPICKVAL( Subject__c , &quot;Birthday Party&quot;), &quot;/resource/cake&quot;, &quot; &quot; ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>