AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/Is_All_Day_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_All_Day_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is All Day Event</label>
    <type>Checkbox</type>
</CustomField>