AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/StartDateString__c.field-meta.xml
<CustomField>
    <fullName>StartDateString__c</fullName>
    <label>StartDateString</label>
    <length>20</length>
    <type>Text</type>
</CustomField>