AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aquatic Class</fullName>
            </value>
            <value>
                <fullName>Swim Meet</fullName>
            </value>
            <value>
                <fullName>Birthday Party</fullName>
            </value>
            <value>
                <fullName>Private Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>