AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/Summer_Camp__c.field-meta.xml
<CustomField>
    <fullName>Summer_Camp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Summer Camp?</label>
    <type>Checkbox</type>
</CustomField>