AquaticAlchemy/force-app/main/default/objects/Public_Event__c/fields/Swim_Level__c.field-meta.xml
<CustomField>
    <fullName>Swim_Level__c</fullName>
    <label>Swim Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>