AquaticAlchemy/force-app/main/default/objects/Public_Event__c/recordTypes/Customer_Event.recordType-meta.xml
<RecordType>
    <fullName>Customer_Event</fullName>
    <active>true</active>
    <label>Customer Event</label>
</RecordType>