AquaticAlchemy/force-app/main/default/objects/Public_Event__c/recordTypes/Summer_Camp_Event.recordType-meta.xml
<RecordType>
    <fullName>Summer_Camp_Event</fullName>
    <active>true</active>
    <label>Summer Camp Event</label>
</RecordType>